[package]
name = "ell_http"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.44"
crossbeam = "0.8.4"
futures = "0.3.32"
inventory = "0.3.24"
once_cell = "1.21.4"
paste = "1.0.15"
popout = "0.1.1"
tokio = { version = "1.52.3", features = ["rt"] }
turso = "0.6.1"
windows = { version = "0.62.2", features = [
  "Win32_Foundation", 
  "Win32_Networking_WinHttp",
  "Win32_System",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
]}
windows-core = "0.62.2"
windows-strings = "0.5.1"
windows-sys = { version = "0.61.2", features = [
  "Win32_Networking",
  "Win32_Networking_WinHttp",
]}

